crates/codegen/language/tests/src/fail/parsing/duplicate_map_key/test.stderr
error: Duplicate map key.
  --> src/fail/parsing/duplicate_map_key/test.rs:20:25
   |
20 |                         field_1 = Required(Baz),
   |                         ^^^^^^^
